fix popup css transform on Safari

--- a/rb/static/widget-new/src/css/popup-widget.css
+++ b/rb/static/widget-new/src/css/popup-widget.css
@@ -3,6 +3,8 @@
     position: absolute;
     display: none;
     opacity: 0.0;
+    -webkit-transform: scale(0.5) translate3d(-50%, 100%, 0); /* Needed for Safari as of 8.0.7 */
+    -webkit-transition: -webkit-transform 200ms ease, opacity 200ms ease;
     transform: scale(0.5) translate3d(-50%, 100%, 0);
     transition: transform 200ms ease, opacity 200ms ease;
     white-space: nowrap;
@@ -12,6 +14,7 @@
 
 .antenna-popup.show {
     opacity: 1.0;
+    -webkit-transform: scale(1.0) translate3d(0, 0, 0);
     transform: scale(1.0) translate3d(0, 0, 0);
 }
 
